# swim-data-tool

./: .coverage  .gitignore  CHANGELOG.md  IMPLEMENTATION_COMPLETE.md  LICENSE  README.md  RELEASE_NOTES_0.11.0.md  check_wade_teams.py  claude.md  debug_team_search.py  pyproject.toml  run_top10_logged.py  test_roster.py  test_roster_simple.py  test_team_code_field.py  test_top10_swas.py  test_two_step_search.py  test_zach_search.py
.github/workflows/: ci.yml
artifacts/: 2025-10-09-project-cleanup.md  IMPLEMENTATION_COMPLETE.md  MAXPREPS_INIT_UPDATE.md  MAXPREPS_RECORDS_PLAN.md  README.md  SEASON_RANGE_COMPLETE.md  SEASON_RANGE_FEATURE.md  TESTING.md  session-2025-10-07-team-search-implementation.md  session-2025-10-08-roster-bugfixes-and-token-management.md  session-2025-10-09-relay-fix-ci-cleanup.md  session-summary-v0.1-v0.3.md  v0.1.1-team-search-feature.md  v0.12.0-v0.12.1-quick-reference.md  v0.2.0-import-commands-plan.md  v0.2.0-release-summary.md  v0.3.0-classify-command-plan.md  v0.3.0-release-summary.md  v0.4.0-generate-records-plan.md  v0.4.0-release-summary.md  v0.4.2-ux-improvements.md  v0.5.0-implementation-plan.md  v0.5.0-release-summary.md  v0.6.0-implementation-summary.md  v0.6.0-release-summary.md  v0.7.0-annual-summary-enhancement.md  v0.7.0-top10-completion-summary.md  v0.8.1-publish-enhancement-summary.md
data/lookups/: roster.csv
docs/: UPDATE_API_TOKEN.md
research/: CLI_WORKFLOW.md  GENERALIZATION_ANALYSIS.md  IMPLEMENTATION_PROGRESS.md  MAXPREPS_API_ANALYSIS.md  MAXPREPS_TEAM_PAGES.md  MAXPREPS_WORKFLOW.md  SESSION_SUMMARY.md  aia-swimming.md  analyze_aia_pdf.py
src/swim_data_tool/: __init__.py  __main__.py  cli.py  version.py
src/swim_data_tool/api/: __init__.py  token_manager.py  usa_swimming.py
src/swim_data_tool/commands/: __init__.py  classify.py  generate.py  import_swimmer.py  import_swimmers.py  init.py  publish.py  roster.py  status.py
src/swim_data_tool/models/: __init__.py  canonical.py  events.py
src/swim_data_tool/services/: __init__.py  record_generator.py
src/swim_data_tool/sources/: __init__.py  base.py  factory.py  maxpreps.py  usa_swimming.py
templates/: .gitignore.template  README.md.template  claude.md.template  env.template  gitkeep.template
tests/test_api/: __init__.py
tests/test_commands/: __init__.py  test_init.py
